--- a/force-app/main/default/lwc/messenger/messenger.html
+++ b/force-app/main/default/lwc/messenger/messenger.html
@@ -1,13 +1,13 @@
 <template>
-    <div class="slds-grid slds-grid_vertical slds-p-around_small">
+    <div class="slds-grid slds-grid_vertical slds-p-around_small" style="background-color: white;">
         <template if:false={loading}>
             <template if:true={access}>
                 <lightning-tabset>
-                    <lightning-tab label="Home" value="Home">
-                        <c-user-search style="position: static" onselect={handleSelect}></c-user-search>
+                    <lightning-tab label="Home" value="Home" style="background-color: white;">
+                        <c-user-search style="position: static" onselect={handleSelect} ongroupsretrieved={populateGroups} ></c-user-search>
                     </lightning-tab>
                     <template for:each={chatWindows} for:item="window">
-                        <lightning-tab key={window.key} value={window.key} end-icon-name="standard:rtc_presence" label={window.value}>
+                        <lightning-tab key={window.key} value={window.key} label={window.value}> <!--end-icon-name="standard:rtc_presence"-->
                             <c-chat-window onclose={handleWindowClose} user-id={userId} active-users-name={objUser.Name} recipient-name={window.value} recipient-id={window.key}></c-chat-window>
                         </lightning-tab>
                     </template>
