--- a/force-app/main/default/lwc/chatWindow/chatWindow.html
+++ b/force-app/main/default/lwc/chatWindow/chatWindow.html
@@ -25,7 +25,7 @@
                 </div>
             </template>
 
-            <div class="slds-p-around_xxx-small chat-window-box" >
+            <div class="slds-p-around_xxx-small chat-window-box" style={textBoxHeight}>
                 <div class="button-row slds-p-bottom_xxx-small" style="z-index: 2;">
                     <template if:false={menuShrunk}>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:end_chat" onclick={closeWindow}  alternative-text="End Chat" title="End Chat"></lightning-button-icon>
