--- a/force-app/main/default/lwc/chatWindow/chatWindow.html
+++ b/force-app/main/default/lwc/chatWindow/chatWindow.html
@@ -35,6 +35,7 @@
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name={muteIcon} onclick={toggleMute}  alternative-text="Notifications Off" title="Notifications Off"></lightning-button-icon>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:image" onclick={toggleUploadModal}  alternative-text="Send File" title="Send File"></lightning-button-icon>
                         <lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="action:share_post" onclick={toggleSelectForChatter}  alternative-text="Post to Chatter" title="Post to Chatter"></lightning-button-icon>
+                        <!--<lightning-button-icon class="slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:video" onclick={getVideoLink}  alternative-text="Post to Chatter" title="Post to Chatter"></lightning-button-icon>-->
                     </template>
                     <lightning-button-icon class="rotate-180 slds-p-left_xxx-small slds-button_icon-border-filled slds-button" icon-name="utility:macros" onclick={toggleShrinkMenu}  alternative-text="Shrink Menu" title="Shrink Menu"></lightning-button-icon>
                 </div>
