Added export to Chatter functionality and logos in lookup

--- a/force-app/main/default/lwc/recordItem/recordItem.html
+++ b/force-app/main/default/lwc/recordItem/recordItem.html
@@ -6,11 +6,11 @@
                     <li role="presentation" class="slds-listbox__item">
                         <div class="slds-media slds-listbox__option slds-listbox__option_entity slds-listbox__option_has-meta" role="option" onclick={handleSelect}>
                             <span class="slds-media__figure slds-listbox__option-icon">
-                                <lightning-icon icon-name={iconname} size="small"></lightning-icon>
+                                <lightning-icon icon-name={iconName} size="small"></lightning-icon>
                             </span>
                             <span class="slds-media__body" style="padding-top: 9px;font-weight: 600;">
                                 <span class="slds-listbox__option-text slds-listbox__option-text_entity ">
-                                    {record.Name}
+                                    {visibleField}
                                 </span>
                             </span>
                         </div>
